applier/build/5pi-home.jsonnet.test-args/media/nzbget/service.yaml
"apiVersion": "v1"
"kind": "Service"
"metadata":
  "name": "nzbget"
  "namespace": "media"
"spec":
  "ports":
  - "port": 6789
  "selector":
    "app": "nzbget"
