applier/build/5pi-home.jsonnet.test-args/media/nzbget/ingress.yaml
"apiVersion": "extensions/v1beta1"
"kind": "Ingress"
"metadata":
  "annotations":
    "nginx.ingress.kubernetes.io/proxy-body-size": "500m"
  "name": "nzbget"
  "namespace": "media"
"spec":
  "rules":
  - "host": "nzbget.d.42o.de"
    "http":
      "paths":
      - "backend":
          "serviceName": "nzbget"
          "servicePort": 6789
        "path": "/"
